--- a/nerdle/index.html
+++ b/nerdle/index.html
@@ -593,7 +593,7 @@
 				        lastWordElement.textContent = this.word;
 				        
 				        if (this.hasWon) {
-				            messageElement.textContent = "Congratulations! Come back tomorrow for a new word!";
+				            messageElement.textContent = "Congratulations!";
 				        } else if (this.currentRow >= 5) {
 				            messageElement.textContent = "Better luck tomorrow!";
 				        } else {
