--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -86,12 +86,13 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.9);
             color: white;
-            padding: 20px;
-            border-radius: 8px;
+            padding: 40px;
+            border-radius: 16px;
             text-align: center;
-            min-width: 200px;
+            min-width: 280px;
+            border: 2px solid #4CAF50;
         }
 
         .start-screen h1 {
@@ -104,27 +105,40 @@
             display: none;
         }
 
+        .game-over h2 {
+            font-size: 32px;
+            color: #4CAF50;
+            margin-bottom: 20px;
+        }
+
+        .game-over p {
+            font-size: 24px;
+            margin-bottom: 30px;
+        }
+
         .start-screen button,
         .game-over button {
             margin-top: 10px;
-            padding: 8px 16px;
+            padding: 16px 32px;
             background-color: #4CAF50;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
             color: white;
             cursor: pointer;
-            font-size: 16px;
-            min-width: 120px;
-            transition: background-color 0.3s;
+            font-size: 20px;
+            min-width: 200px;
+            transition: background-color 0.3s, transform 0.2s;
         }
 
         .start-screen button:hover,
         .game-over button:hover {
             background-color: #45a049;
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
+    <!-- Rest of the HTML remains unchanged -->
     <div id="score">Score: 0</div>
     <div id="game-container">
         <canvas id="gameCanvas"></canvas>
@@ -146,6 +160,7 @@
     </div>
 
     <script>
+        // JavaScript code remains unchanged
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
         const scoreElement = document.getElementById('score');
