--- a/index.html
+++ b/index.html
@@ -578,7 +578,14 @@ c-84 -42 -203 -88 -209 -82 -2 2 -6 48 -10 101 l-6 98 32 -6 c18 -3 69 -14
 </g>
 </svg>`,
 mobileOnly: true
-			}
+			},
+		waveform: {
+			title: 'Waveform',
+			path: '/games/waveform/',
+			description: 'Guide particles to their targets by shaping a wave using frequency, amplitude, and phase controls while avoiding obstacles in this unique physics puzzle.',
+			icon: `<svg class="svg-icon" style="vertical-align: middle;fill: #fff;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M512 51.2c-253.44 0-460.8 207.36-460.8 460.8s207.36 460.8 460.8 460.8 460.8-207.36 460.8-460.8-207.36-460.8-460.8-460.8z m0 51.2c217.6 0 394.24 168.96 407.04 384h-48.64c-43.52 0-76.8 33.28-76.8 76.8v51.2c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6v-204.8c0-43.52-33.28-76.8-76.8-76.8s-76.8 33.28-76.8 76.8v204.8c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6v-204.8c0-43.52-33.28-76.8-76.8-76.8s-76.8 33.28-76.8 76.8v204.8c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6v-179.2c0-43.52-33.28-76.8-76.8-76.8s-76.8 33.28-76.8 76.8v25.6c0 15.36-10.24 25.6-25.6 25.6h-48.64c12.8-215.04 189.44-384 407.04-384z m0 819.2c-217.6 0-394.24-168.96-407.04-384h48.64c43.52 0 76.8-33.28 76.8-76.8v-25.6c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v179.2c0 43.52 33.28 76.8 76.8 76.8s76.8-33.28 76.8-76.8v-204.8c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v204.8c0 43.52 33.28 76.8 76.8 76.8s76.8-33.28 76.8-76.8v-204.8c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v204.8c0 43.52 33.28 76.8 76.8 76.8s76.8-33.28 76.8-76.8v-51.2c0-15.36 10.24-25.6 25.6-25.6h48.64c-12.8 215.04-189.44 384-407.04 384z"  /></svg>`,
+			mobileOnly: false
+		},
 
         };
 
