--- a/waveform/index.html
+++ b/waveform/index.html
@@ -26,7 +26,7 @@
             }
             canvas {
                 position: absolute;
-                top: 0;
+                top: -10rem;
                 left: 0;
                 touch-action: none;
             }
@@ -36,7 +36,7 @@
             }
             .controls {
                 position: absolute;
-                bottom: 90px;
+                bottom: 120px;
                 left: 50%;
                 transform: translateX(-50%);
                 display: flex;
