updated snake game

--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -75,10 +75,10 @@
             user-select: none;
         }
 
-        #up { top: 0; left: 60px; }
-        #right { top: 60px; right: 0; }
+        #up { top: 0; left: 60px; padding-bottom: 10px;}
+        #right { top: 60px; right: 0; padding-bottom: 10px; }
         #down { bottom: 0; left: 60px; }
-        #left { top: 60px; left: 0; }
+        #left { top: 60px; left: 0; padding-bottom: 10px;}
 
         .start-screen,
         .game-over {
