--- a/waveform/index.html
+++ b/waveform/index.html
@@ -202,7 +202,7 @@
         </div>
         <div id="start-screen">
             <h1>Waveform</h1>
-            <p>Guide the wave to the green circles by adjusting the wave.</p>
+            <p>Guide the particle to the green circles by adjusting the wave.</p>
             <p><strong>Frequency</strong> - Changes how many peaks and valleys</p>
             <p><strong>Amplitude</strong> - Makes the wave taller or shorter</p>
             <p><strong>Phase</strong> - Moves the wave left and right</p>
