minor tweak to nerdle

--- a/nerdle/index.html
+++ b/nerdle/index.html
@@ -295,7 +295,7 @@
                     </div>
                     <div class="overlay-stat-box">
                         <div class="overlay-stat-number" id="overlay-current-streak">0</div>
-                        <div class="overlay-stat-label">Current Streak</div>
+                        <div class="overlay-stat-label">Streak</div>
                     </div>
                     <div class="overlay-stat-box">
                         <div class="overlay-stat-number" id="overlay-max-streak">0</div>
