updated bubble pop

--- a/bubble-pop/index.html
+++ b/bubble-pop/index.html
@@ -101,7 +101,7 @@
     <div id="startScreen" class="overlay">
         <div class="content">
             <h1>Bubble Pop</h1>
-            <p>Pop the floating bubbles before they reach the top!</p>
+            <p>Pop the falling bubbles before they reach the bottom!</p>
             <p>Smaller bubbles are worth more points.</p>
             <p>Watch as bubbles bounce and collide!</p>
             <p>Don't let any bubbles escape!</p>
